--- a/Todo_list/templates/Todo_list/signup.html
+++ b/Todo_list/templates/Todo_list/signup.html
@@ -6,12 +6,12 @@
     <title>Document</title>
 </head>
 <body>
-    <h1>Login Page</h1>
+    <h1>Sign Up</h1>
     <form action="" method="POST">
         {% csrf_token %}
         {{form.as_p}}
-        <input type="submit" value="Login">
+        <input type="submit" value="Sign Up">
     </form>
-    <p>Don't you have an Account?<a href="\signup">Sign Up</a></p>
+    <p>Already have an Account?<a href="\login">Login</a></p>
 </body>
 </html>
