--- a/Todo_list/templates/Todo_list/Details.html
+++ b/Todo_list/templates/Todo_list/Details.html
@@ -1,3 +1,5 @@
+{% extends 'Todo_list/main.html' %}
+{% block content %}
 <!DOCTYPE html>
 <html lang="en">
 <head>
@@ -13,3 +15,4 @@
     </tr></table>
 </body>
 </html>
+{% endblock content %}
