--- a/Todo_list/templates/Todo_list/Delete.html
+++ b/Todo_list/templates/Todo_list/Delete.html
@@ -1,3 +1,5 @@
+{% extends 'Todo_list/main.html' %}
+{% block content %}
 <!DOCTYPE html>
 <html lang="en">
 <head>
@@ -6,11 +8,14 @@
     <title>Document</title>
 </head>
 <body>
-    <a href="/">Go back</a>
-    <form action="" method="POST">
-        {% csrf_token %}
-        <p>Are you sure you want to delete? "{{Tasks}}"</p>
-        <input type="submit" value="Delete"/>
-    </form>
+    <div class="header"> <a href="/">&#8592;Go Back</a></div>
+    <div class="form_body">
+        <form action="" method="POST">
+            {% csrf_token %}
+            <p>Are you sure you want to delete? "{{Tasks}}"</p>
+            <input type="submit" value="Delete" class="button">
+        </form>
+    </div>
 </body>
 </html>
+{% endblock content %}
