--- a/Todo_list/templates/Todo_list/Login.html
+++ b/Todo_list/templates/Todo_list/Login.html
@@ -1,3 +1,5 @@
+{% extends 'Todo_list/main.html' %}
+{% block content %}
 <!DOCTYPE html>
 <html lang="en">
 <head>
@@ -6,12 +8,15 @@
     <title>Document</title>
 </head>
 <body>
-    <h1>Login Page</h1>
-    <form action="" method="POST">
-        {% csrf_token %}
-        {{form.as_p}}
-        <input type="submit" value="Login">
-    </form>
-    <p>Don't you have an Account?<a href="\signup">Sign Up</a></p>
+    <div class="header"><h1>Login</h1></div>
+    <div class="form_body">
+        <form action="" method="POST">
+            {% csrf_token %}
+            {{form.as_p}}
+            <input type="submit" value="Login" class="button">
+        </form>
+        <p>Don't you have an Account?<a href="\signup">Sign Up</a></p>    
+    </div>
 </body>
 </html>
+{% endblock content %}
