--- a/Todo_list/templates/Todo_list/Tasks.html
+++ b/Todo_list/templates/Todo_list/Tasks.html
@@ -1,3 +1,7 @@
+{% extends 'Todo_list/main.html' %}
+
+{% block content %}
+
 <!DOCTYPE html>
 <html lang="en">
 <head>
@@ -6,27 +10,46 @@
     <title>Document</title>
 </head>
 <body>
-    {% if request.user.is_authenticated %}
-        <p>{{request.user}}</p>
-        <a href="logout/">Logout</a>
-    {% else %}
-        <a href="login/">Login</a>
-    {% endif %}
-    <hr>
-    <h1>Todo</h1>
-    <h4><a href="\createTask">Add Task</a></h4>
-    <table>
-        <tr>
-            <th>Item</th>
-        </tr>
+    <div class="header">
+        <div>
+            <h1>Hello {{request.user|title}}</h1>
+            <h3>You have <i>{{count}}</i> incomplete item{% if count > 1 %}s{% endif %}</h3>
+        </div>
+        {% if request.user.is_authenticated %}
+                <a href="logout/">Logout</a>
+            {% else %}
+                <a href="login/">Login</a>
+            {% endif %}
+    </div>
+    <div class="searchbar">
+        <form action="" method="GET" class="search_form">
+            <input type="text" name="search" value="{{search}}" class="textarea">
+            <input type="submit" class="button" value="Search">
+        </form>
+        <a href="\createTask" class="add">&#x2b;</a>
+    </div>
+    
+    <div class="task_items">
         {% for i in Tasks %}
-        <tr>
-            <td>{{i.title}}</td>
-            <td><a href="\task\{{i.id}}"><button>View</button></a></td>
-            <td><a href="\updateTask\{{i.id}}"><button>Edit</button></a></td>
-            <td><a href="\deleteTask\{{i.id}}"><button>Delete</button></a></td>
-        </tr>
+        <div class="task">
+            {% if i.complete %}
+            <div class="task_title">
+                <div class="completeicon"></div>
+                <i><s><a href="\updateTask\{{i.id}}">{{i.title}}</a></s></i>
+            </div>
+            <a class="deletebutton" href="\deleteTask\{{i.id}}">&#215;</a>
+            {% else %}
+            <div class="task_title">
+                <div class="incompleteicon"></div>
+                <a href="\updateTask\{{i.id}}">{{i.title}}</a>
+            </div>
+            <a class="deletebutton" href="\deleteTask\{{i.id}}">&#215;</a>
+            {% endif %}
+            
+        </div>
+        {% empty %}
         {% endfor %}
-    </table>
+    </div>
 </body>
 </html>
+{% endblock content %}
