--- a/Todo_list/templates/Todo_list/create_task.html
+++ b/Todo_list/templates/Todo_list/create_task.html
@@ -1,3 +1,5 @@
+{% extends 'Todo_list/main.html' %}
+{% block content %}
 <!DOCTYPE html>
 <html lang="en">
 <head>
@@ -6,12 +8,17 @@
     <title>Document</title>
 </head>
 <body>
-    <h3>Task Form</h3>
-    <a href="/">Go back</a>
-    <form action="" method="POST">
-        {% csrf_token %}
-            {{form.as_p}} 
-        <input type="submit" value="Submit">   
-    </form>
+    <div class="header">
+        <a href="/">&#8592; Back</a>
+    </div>
+
+    <div class="form_body">
+        <form action="" method="POST">
+            {% csrf_token %}
+                {{form.as_p}} 
+            <input type="submit" value="Submit" class="button">   
+        </form>
+    </div>
 </body>
 </html>
+{% endblock content %}
