--- a/Todo_list/templates/Todo_list/signup.html
+++ b/Todo_list/templates/Todo_list/signup.html
@@ -1,3 +1,5 @@
+{% extends 'Todo_list/main.html' %}
+{% block content %}
 <!DOCTYPE html>
 <html lang="en">
 <head>
@@ -6,12 +8,23 @@
     <title>Document</title>
 </head>
 <body>
-    <h1>Sign Up</h1>
-    <form action="" method="POST">
-        {% csrf_token %}
-        {{form.as_p}}
-        <input type="submit" value="Sign Up">
-    </form>
-    <p>Already have an Account?<a href="\login">Login</a></p>
+    <div class="header"><h1>Sign Up</h1></div>
+    <div class="form_body">
+        <form action="" method="POST">
+          <!----  {% csrf_token %}
+            <label>{{form.username.label}}</label>
+            {{form.username}}
+            <label>{{form.password1.label}}</label>
+            {{form.password2}}
+            <label>{{form.password2.label}}</label>
+            {{form.password2}}--->
+            {% csrf_token %}
+            {{form.as_p}}
+            <input type="submit" value="Sign Up" class="button" style="margin-top: 2vh;">
+        </form>
+        <p>Already have an Account?<a href="\login">Login</a></p>
+    </div>
+    
 </body>
 </html>
+{% endblock content %}
